--- a/src/ChinaTower.StationPlanning/Views/Shared/_Layout.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Shared/_Layout.cshtml
@@ -100,11 +100,13 @@
             <li class="dropdown-submenu @(ViewContext.RouteData.Values["controller"].ToString() == "Form" ? "active" : "")">
                 <a href="#"><i class="fa-edit fa fa-lg"></i>资源库表</a>
                 <ul class="dropdown-menu">
-                    <li><a asp-controller="Form" asp-action="A">站址储备库</a></li>
+                    @*<li><a asp-controller="Form" asp-action="A">站址储备库</a></li>
                     <li><a asp-controller="Form" asp-action="B">在建难点库</a></li>
                     <li><a asp-controller="Form" asp-action="E">潜在难点库</a></li>
                     <li><a asp-controller="Form" asp-action="C">存量资源库</a></li>
-                    <li><a asp-controller="Form" asp-action="D">新建站址库</a></li>
+                    <li><a asp-controller="Form" asp-action="D">新建站址库</a></li>*@
+                    <li><a asp-controller="Form" asp-action="F">疑难站点库</a></li>
+                    <li><a asp-controller="Form" asp-action="G">难点站档案</a></li>
                 </ul>
             </li>
             @if (User.AnyRoles("Root, Master"))
