--- a/src/ChinaTower.StationPlanning/Views/Form/G.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Form/G.cshtml
@@ -17,6 +17,12 @@
                 <table class="table table-striped b-t text-small">
                     <thead>
                         <tr>
+                            <th style="text-align:center" colspan="10">站址基本信息</th>
+                            <th style="text-align:center" colspan="4">站址信息</th>
+                            <th style="text-align:center" colspan="6">逐级确认信息</th>
+                            <th style="text-align:center" colspan="2"></th>
+                        </tr>
+                        <tr>
                             @foreach (var x in ChinaTower.StationPlanning.Controllers.FormController.HeaderOfG1)
                             {
                                 <th>@x</th>
